--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Menu/AdminMenu.fxml
@@ -87,7 +87,7 @@
                         </ImageView>
                         <Text fx:id="greeting" layoutX="36.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-label" text="Hello, Admin" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="95.41300010681152" />
                         <Text fill="#757575" layoutX="81.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome," AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="130.0" />
-                        <Text fill="#757575" layoutX="66.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0"  text="Have a nice day" AnchorPane.topAnchor="145.0" />
+                        <Text fill="#757575" layoutX="66.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Have a nice day" AnchorPane.topAnchor="145.0" />
                     </children>
                 </AnchorPane>
                 <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
@@ -160,9 +160,65 @@
         </AnchorPane>
     </left>
     <right>
-        <AnchorPane prefWidth="700.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="400.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
+            </padding>
+         <children>
+            <BorderPane prefHeight="654.4" prefWidth="700.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <center>
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-menu-container" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label prefHeight="34.0" prefWidth="234.0" styleClass="container-label" text="Menu Item Information">
+                           <padding>
+                              <Insets left="10.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
+                        <Label text="Menu Item Name:" />
+                        <TextField fx:id="menuitemnamefield" prefHeight="30.0" promptText="Menu Item Name *" />
+                        <Label text="Price:" />
+                        <TextField fx:id="pricefield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Price *" />
+                        <Label text="Item Type:" />
+                        <ChoiceBox fx:id="itemtypefield" prefWidth="150.0" />
+                        <Label text="Dietary Requirements" />
+                        <ChoiceBox fx:id="dietaryrequirementsfield" prefWidth="150.0" />
+                        <Label text="Item Description:" />
+                        <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Item Description *" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </center>
+               <bottom>
+                  <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 10;" BorderPane.alignment="CENTER">
+                    <buttons>
+                      <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" styleClass="submit-button" text="Submit" />
+                        <Button fx:id="addmenuitembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddMenuItemButtonClick" styleClass="add-button" text="Add Item +" />
+                        <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" styleClass="cancel-button" text="Cancel" />
+                    </buttons>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets right="30.0" />
+                     </padding>
+                  </ButtonBar>
+               </bottom>
+            </BorderPane>
+         </children></AnchorPane>
+    </right>
+    <bottom>
+        <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+    </bottom>
+    <center>
+        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
+            <padding>
+                <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
             </padding>
          <children>
                 <VBox prefHeight="655.0" prefWidth="700.0" styleClass="list-menu-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -180,42 +236,28 @@
                   </Label>
                   <HBox prefHeight="50.0" prefWidth="200.0" styleClass="table-header">
                      <children>
-                        <AnchorPane prefHeight="50.0" prefWidth="212.0">
+                        <AnchorPane HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="47.0" layoutY="15.0" styleClass="database-label" text="Item Name" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="111.2" styleClass="database-label" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="62.0" layoutY="14.0" styleClass="database-label" text="Price" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="86.4" styleClass="database-label" text="Price" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane layoutX="329.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="57.0" layoutY="14.0" styleClass="database-label" text="Type" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="72.8" styleClass="database-label" text="Type" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="396.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane layoutX="436.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="44.0" layoutY="14.0" styleClass="database-label" text="Dietary" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="80.0" styleClass="database-label" text="Dietary" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
+                        <AnchorPane layoutX="489.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" HBox.hgrow="ALWAYS" />
+                        <AnchorPane layoutX="521.0" layoutY="10.0" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
                   <ListView fx:id="menuitemlist" styleClass="list-pane" VBox.vgrow="ALWAYS" />
@@ -224,75 +266,7 @@
                   <Insets top="10.0" />
                </padding>
             </VBox>
-         </children></AnchorPane>
-    </right>
-    <bottom>
-        <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
-    </bottom>
-    <center>
-        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
-            <padding>
-                <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
-            </padding>
-            <children>
-                <BorderPane prefHeight="655.0" prefWidth="370.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <bottom>
-                        <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
-                            <children>
-                                <Button fx:id="editbutton" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="40.0" prefWidth="150.0" styleClass="edit-button" text="Edit Menu Item" />
-                                <Button fx:id="removebutton" mnemonicParsing="false" onAction="#onRemoveButtonClick" prefHeight="40.0" prefWidth="150.0" styleClass="remove-button" text="Remove Menu Item" />
-                            </children>
-                        </HBox>
-                    </bottom>
-               <center>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 10;" BorderPane.alignment="CENTER">
-                     <center>
-                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-menu-container" BorderPane.alignment="CENTER">
-                           <children>
-                              <Label prefHeight="34.0" prefWidth="198.0" styleClass="container-label" text="Menu Item Information">
-                                 <padding>
-                                    <Insets left="10.0" top="10.0" />
-                                 </padding>
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
-                              <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
-                              <Label text="Menu Item Name:" />
-                              <TextField fx:id="menuitemnamefield" prefHeight="30.0" promptText="Menu Item Name *" />
-                              <Label text="Price:" />
-                              <TextField fx:id="pricefield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Price *" />
-                              <Label text="Item Type:" />
-                              <ChoiceBox fx:id="itemtypefield" prefWidth="150.0" />
-                              <Label text="Dietary Requirements" />
-                              <ChoiceBox fx:id="dietaryrequirementsfield" prefWidth="150.0" />
-                              <Label text="Item Description:" />
-                              <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Item Description *" />
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </VBox>
-                     </center>
-                     <bottom>
-                        <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 10;" BorderPane.alignment="CENTER">
-                          <buttons>
-                            <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" styleClass="submit-button" text="Submit" />
-                              <Button fx:id="addmenuitembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddMenuItemButtonClick" styleClass="add-button" text="Add Item +" />
-                              <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" styleClass="cancel-button" text="Cancel" />
-                          </buttons>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <padding>
-                              <Insets right="30.0" />
-                           </padding>
-                        </ButtonBar>
-                     </bottom>
-                  </BorderPane>
-               </center>
-                </BorderPane>
-            </children>
+         </children>
         </AnchorPane>
     </center>
 </BorderPane>
