--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -159,12 +159,68 @@
         </AnchorPane>
     </left>
     <right>
-        <AnchorPane prefWidth="700.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="400.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
             </padding>
          <children>
-                <VBox prefHeight="655.0" prefWidth="700.0" styleClass="list-stock-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <BorderPane prefHeight="654.4" prefWidth="400.0" style="-fx-background-color: white; -fx-background-radius: 10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <center>
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-stock-container" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label prefHeight="34.0" prefWidth="198.0" styleClass="container-label" text="Item Information">
+                           <padding>
+                              <Insets left="10.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
+                        <Label text="Item Name:" />
+                        <TextField fx:id="itemnamefield" prefHeight="30.0" promptText="Item Name*" />
+                        <Label layoutX="21.0" layoutY="78.0" text="Desired Quantity:" />
+                        <TextField fx:id="desiredquantityfield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Desired Quantity*" />
+                        <Label layoutX="21.0" layoutY="144.0" text="Actual Quantity:" />
+                        <TextField fx:id="actualquantityfield" layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Actual Quantity" />
+                        <Label text="Item Price:" />
+                        <TextField fx:id="itempricefield" layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Item Price*" />
+                        <Label text="Item Description:" />
+                        <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Description*" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </center>
+               <bottom>
+                  <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 10;" BorderPane.alignment="CENTER">
+                    <buttons>
+                      <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" styleClass="submit-button" text="Submit" />
+                        <Button fx:id="additembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddItemButtonClick" styleClass="add-button" text="Add Item +" />
+                        <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" styleClass="cancel-button" text="Cancel" />
+                    </buttons>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets right="30.0" />
+                     </padding>
+                  </ButtonBar>
+               </bottom>
+            </BorderPane>
+         </children></AnchorPane>
+    </right>
+    <bottom>
+        <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+    </bottom>
+    <center>
+        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
+            <padding>
+                <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
+            </padding>
+         <children>
+                <VBox prefHeight="654.4" prefWidth="669.6" styleClass="list-stock-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Label styleClass="container-label" text="Stocked Item Details">
                      <font>
@@ -179,42 +235,28 @@
                   </Label>
                   <HBox prefHeight="50.0" prefWidth="200.0" styleClass="table-header">
                      <children>
-                        <AnchorPane prefHeight="50.0" prefWidth="212.0">
+                        <AnchorPane HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="41.0" layoutY="15.0" styleClass="database-label" text="Item Name" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="88.0" styleClass="database-label" text="Item Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="12.0" layoutY="14.0" styleClass="database-label" text="Desired Quantity" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="127.2" styleClass="database-label" text="Desired Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="210.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane layoutX="329.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="22.0" layoutY="14.0" styleClass="database-label" text="Actual Quantity" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="112.8" styleClass="database-label" text="Actual Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="396.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane layoutX="436.0" layoutY="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="62.0" layoutY="14.0" styleClass="database-label" text="Price" textFill="#8f9bb3">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
+                              <Label alignment="CENTER" prefHeight="50.4" prefWidth="108.8" styleClass="database-label" text="Price" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
+                        <AnchorPane layoutX="489.0" layoutY="10.0" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
+                        <AnchorPane layoutX="521.0" layoutY="10.0" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
                   <ListView fx:id="itemlist" styleClass="list-pane" VBox.vgrow="ALWAYS" />
@@ -223,75 +265,7 @@
                   <Insets top="10.0" />
                </padding>
             </VBox>
-         </children></AnchorPane>
-    </right>
-    <bottom>
-        <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
-    </bottom>
-    <center>
-        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
-            <padding>
-                <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
-            </padding>
-            <children>
-                <BorderPane prefHeight="655.0" prefWidth="370.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <bottom>
-                        <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
-                            <children>
-                                <Button fx:id="editbutton" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="40.0" prefWidth="150.0" styleClass="edit-button" text="Edit Item" />
-                                <Button fx:id="removebutton" mnemonicParsing="false" onAction="#onRemoveButtonClick" prefHeight="40.0" prefWidth="150.0" styleClass="remove-button" text="Remove Item" />
-                            </children>
-                        </HBox>
-                    </bottom>
-               <center>
-                  <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 10;" BorderPane.alignment="CENTER">
-                     <center>
-                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-stock-container" BorderPane.alignment="CENTER">
-                           <children>
-                              <Label prefHeight="34.0" prefWidth="198.0" styleClass="container-label" text="Item Information">
-                                 <padding>
-                                    <Insets left="10.0" top="10.0" />
-                                 </padding>
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
-                              <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
-                              <Label text="Item Name:" />
-                              <TextField fx:id="itemnamefield" prefHeight="30.0" promptText="Item Name*" />
-                              <Label layoutX="21.0" layoutY="78.0" text="Desired Quantity:" />
-                              <TextField fx:id="desiredquantityfield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Desired Quantity*" />
-                              <Label layoutX="21.0" layoutY="144.0" text="Actual Quantity:" />
-                              <TextField fx:id="actualquantityfield" layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Actual Quantity" />
-                              <Label text="Item Price:" />
-                              <TextField fx:id="itempricefield" layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Item Price*" />
-                              <Label text="Item Description:" />
-                              <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Description*" />
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                           </padding>
-                        </VBox>
-                     </center>
-                     <bottom>
-                        <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 10;" BorderPane.alignment="CENTER">
-                          <buttons>
-                            <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" styleClass="submit-button" text="Submit" />
-                              <Button fx:id="additembutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddItemButtonClick" styleClass="add-button" text="Add Item +" />
-                              <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" styleClass="cancel-button" text="Cancel" />
-                          </buttons>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <padding>
-                              <Insets right="30.0" />
-                           </padding>
-                        </ButtonBar>
-                     </bottom>
-                  </BorderPane>
-               </center>
-                </BorderPane>
-            </children>
+         </children>
         </AnchorPane>
     </center>
 </BorderPane>
