--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/AdminAnalytics.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/AdminAnalytics.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.chart.ScatterChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -163,9 +164,9 @@
                 <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
             </padding>
          <children>
-             <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="manage-menu-container" BorderPane.alignment="CENTER">
+             <VBox prefHeight="654.4" prefWidth="400.0" spacing="10.0" styleClass="manage-menu-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
                  <children>
-                     <Label prefHeight="34.0" prefWidth="234.0" styleClass="container-label" text="Menu Item Information">
+                     <Label prefHeight="34.0" prefWidth="234.0" styleClass="container-label" text=" Analytics">
                          <padding>
                              <Insets left="10.0" top="10.0" />
                          </padding>
@@ -174,7 +175,16 @@
                          </font>
                      </Label>
                      <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
-                     <Label text="Menu Item Name:" />
+                     <Label text="Number of Orders completed (Daily):" />
+                  <TextField fx:id="dailyordernumber" promptText="# of Orders" />
+                  <Label layoutX="20.0" layoutY="77.0" text="Number of Orders completed (Monthly):" />
+                  <TextField fx:id="monthlyordernumber" layoutX="20.0" layoutY="106.0" promptText="# of Orders" />
+                  <Label text="Total Daily Sale:" />
+                  <TextField fx:id="totaldailysales" promptText="\$ total daily sales" />
+                  <Label text="Total Monthly Sales:" />
+                  <TextField fx:id="totalmonthlysales" promptText="\$ total monthly sales" />
+                  <Label text="Completed Orders Data" />
+                  <ListView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
 
                  </children>
                  <padding>
@@ -189,7 +199,7 @@
     <center>
         <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
             <padding>
-                <Insets bottom="10.0" left="20.0" right="10.0" top="20.0" />
+                <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
             </padding>
             <children>
                 <BorderPane prefHeight="654.4" prefWidth="419.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -202,7 +212,7 @@
                         </HBox>
                     </bottom>
                <center>
-                      <ScatterChart fx:id="chart" prefHeight="400" prefWidth="600" BorderPane.alignment="CENTER">
+                      <ScatterChart fx:id="chart" prefHeight="400" prefWidth="600" style="-fx-background-color: white; -fx-background-radius: 10;" BorderPane.alignment="CENTER">
                           <xAxis>
                               <NumberAxis label="Hour of the Day" fx:id="xAxis" />
                           </xAxis>
