--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage2.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage2.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -11,6 +13,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
@@ -73,17 +76,17 @@
                <bottom>
                   <HBox alignment="CENTER" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="sendorderbutton" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" styleClass="submit-button" text="Send Order" />
+                        <Button fx:id="sendorderbutton" onAction="#onSendOrderButtonClick" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" styleClass="submit-button" text="Send Order" />
                         <VBox spacing="10.0">
                            <children>
-                              <Button fx:id="customizebutton" mnemonicParsing="false" prefHeight="55.0" prefWidth="170.0" styleClass="customize-button" text="Customize" />
-                              <Button fx:id="itemcorrectbutton" mnemonicParsing="false" prefHeight="55.0" prefWidth="170.0" styleClass="item-correct" text="Item Correct" />
+                              <Button fx:id="customizebutton" mnemonicParsing="false" onAction="#onCustomizeButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="customize-button" text="Customize" />
+                              <Button fx:id="itemcorrectbutton" mnemonicParsing="false" onAction="#onItemCorrectButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="item-correct" text="Item Correct" />
                            </children>
                         </VBox>
                         <VBox layoutX="210.0" layoutY="10.0" spacing="10.0">
                            <children>
-                              <Button fx:id="voiditembutton" mnemonicParsing="false" prefHeight="55.0" prefWidth="170.0" styleClass="voiditem-button" text="Void Item" />
-                              <Button fx:id="restartbutton" mnemonicParsing="false" prefHeight="55.0" prefWidth="170.0" styleClass="restart-button" text="Restart" />
+                              <Button fx:id="voiditembutton" mnemonicParsing="false" onAction="#onVoidItemButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="voiditem-button" text="Void Item" />
+                              <Button fx:id="restartbutton" mnemonicParsing="false" onAction="#onRestartButtonClick" prefHeight="55.0" prefWidth="170.0" styleClass="restart-button" text="Restart" />
                            </children>
                         </VBox>
                      </children>
@@ -107,33 +110,115 @@
     <center>
         <AnchorPane styleClass="root-anchor" BorderPane.alignment="TOP_LEFT">
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                <Insets bottom="10.0" left="10.0" right="10.0" />
             </padding>
          <children>
-            <TabPane fx:id="itemtab" prefHeight="660.0" prefWidth="780.0" tabClosingPolicy="UNAVAILABLE" styleClass="tab-pane" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TabPane fx:id="itemtab" prefHeight="670.4" prefWidth="769.6" snapToPixel="false" styleClass="tab-pane" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <tabs>
-                <Tab>
+                <Tab styleClass="searchtab">
                     <graphic>
-                        <ImageView  fitHeight="22" fitWidth="22">
+                        <ImageView fitHeight="22" fitWidth="22">
                             <image>
                                 <Image url="@../../images/search_icon.png" />
                             </image>
                         </ImageView>
                     </graphic>
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="pane-style">
+                           <children>
+                              <VBox prefHeight="571.2" prefWidth="736.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0" spacing="5.0">
+                                       <children>
+                                          <Button fx:id="filterbutton" mnemonicParsing="false" onAction="#onFilterButtonClick" styleClass="filter-button" text="Filter" />
+                                          <Label text="Min Price" />
+                                          <Slider fx:id="priceslider" />
+                                          <Label text="Max Price" />
+                                       </children>
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                       <padding>
+                                          <Insets left="10.0" right="10.0" />
+                                       </padding>
+                                    </HBox>
+                                    <ScrollPane fitToHeight="true" fitToWidth="true" styleClass="scroll-pane" VBox.vgrow="ALWAYS">
+                                       <content>
+                                          <FlowPane fx:id="searchpane" hgap="10.0" prefWrapLength="0.0" vgap="10.0">
+                                             <padding>
+                                                <Insets bottom="5.0" left="5.0" top="5.0" />
+                                             </padding>
+                                          </FlowPane>
+                                       </content>
+                                    </ScrollPane>
+                                 </children>
+                              </VBox>
+                           </children></AnchorPane>
                   </content>
                 </Tab>
-                <Tab text="Untitled Tab 2">
+                <Tab styleClass="tab" text="Entree">
                   <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="pane-style">
+                           <children>
+                              <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="571.2" prefWidth="736.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <content>
+                                    <FlowPane fx:id="entreepane" hgap="10.0" prefHeight="572.8" prefWidth="738.4" vgap="10.0">
+                                       <padding>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </FlowPane>
+                                 </content>
+                              </ScrollPane>
+                           </children></AnchorPane>
                   </content>
                 </Tab>
+                  <Tab text="Main">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="pane-style">
+                           <children>
+                              <FlowPane fx:id="mainpane" hgap="10.0" layoutX="319.0" layoutY="116.0" prefHeight="578.4" prefWidth="728.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </FlowPane>
+                           </children></AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Drinks">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="pane-style">
+                           <children>
+                              <FlowPane fx:id="drinkspane" hgap="10.0" layoutX="322.0" layoutY="83.0" prefHeight="578.4" prefWidth="728.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </FlowPane>
+                           </children></AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Dessert">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="list-pane">
+                           <children>
+                              <FlowPane fx:id="dessertpane" hgap="10.0" layoutX="183.0" layoutY="42.0" prefHeight="578.4" prefWidth="728.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </FlowPane>
+                           </children></AnchorPane>
+                     </content>
+                  </Tab>
               </tabs>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </TabPane>
          </children>
          <BorderPane.margin>
-            <Insets bottom="10.0" right="10.0" top="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
         </AnchorPane>
     </center>
