--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage2.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage2.css
@@ -1,5 +1,5 @@
 /*
- * Containers
+ * Container styling
  */
 .root-anchor {
     -fx-background-color: #f5f5f5;
@@ -47,6 +47,8 @@
     -fx-border-color: #white;
     -fx-background-radius: 10;
     -fx-border-radius: 10px;
+    -fx-hbar-policy: never;
+    -fx-vbar-policy: never;
 }
 .list-cell:filled:selected:focused,
 .list-cell:filled:selected,
@@ -54,9 +56,12 @@
 .list-cell:odd {
     -fx-background-color: transparent;
 }
+.list-pane .scroll-bar:horizontal {
+    -fx-opacity: 0;      /* Makes the scrollbar invisible */
 
-/*
-Buttons
+}
+/**
+    * Button Styling
  */
 .submit-button {
     -fx-background-color: #A5CC72;
@@ -90,8 +95,9 @@ Buttons
     -fx-font-size: 20px;
     -fx-font-family: "Open Sans";
 }
-/*
-Text
+
+/**
+    * Text Styling
  */
 .heading {
     -fx-text-fill: #4A85F6;
@@ -129,9 +135,16 @@ Text
     -fx-font-size: 15px;
     -fx-font-family: "Arial", sans-serif;
 }
-/*
-tabpane
+
+.docket-label {
+    -fx-text-fill: #000000;
+    -fx-font-size: 15px;
+    -fx-font-family: "Arial", sans-serif;
+}
+/**
+    * Tab Styling
  */
+
 /* TabPane styling */
 .tab-pane {
     -fx-background-color: transparent;
@@ -205,4 +218,6 @@ tabpane
     -fx-background-radius: 10;
     -fx-border-color: white;
     -fx-border-radius: 10;
+    -fx-hbar-policy: never;
+    -fx-vbar-policy: never;
 }
